# qt_programming_2025

./: .gitignore  CMakeLists.txt
res/: res.qrc
src/: MyGame.cpp
src/Items/: Item.cpp  Item.h
src/Items/Armors/: Armor.cpp  Armor.h  BulletproofVest.cpp  BulletproofVest.h  ChainmailArmor.cpp  ChainmailArmor.h  OldShirt.cpp
src/Items/Characters/: Character.cpp  Character.h  Link.cpp  Link.h
src/Items/Consumables/: Adrenaline .cpp  Adrenaline .h  Adrenaline.cpp  Adrenaline.h  Bandage.cpp  Bandage.h  Consumable.cpp  Consumable.h  Medkit.cpp  Medkit.h
src/Items/HeadEquipments/: HeadEquipment.cpp
src/Items/LegEquipments/: LegEquipment.cpp
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/Items/Maps/platform/: EarthPlatform.h  Earthplatform.cpp  GrassPlatform.cpp  GrassPlatform.h  IcePlatform.cpp  IcePlatform.h  Platform.cpp  Platform.h
src/Items/Weapon/: Bullet.cpp  Bullet.h  Fist.cpp  Fist.h  Knife.cpp  Knife.h  Rifle.cpp  Rifle.h  ShotPut.cpp  ShotPut.h  ShotPutProjectile.cpp  ShotPutProjectile.h  SniperRifle.cpp  SniperRifle.h  Weapon.cpp  Weapon.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
src/utils/: SpiriteSheet.cpp
